<resources>
    <string name="app_name">Magic Story</string>
    <string name="statement_text">Enter 3 words:</string>
    <string name="Choose_category_text">Choose Category</string>
    <string name="generate_text">Generate</string>
    <string name="Word2_text">Word 2</string>
    <string name="Word3_text">Word 3</string>
    <string name="logo_text">Logo</string>
    <string name="word1_text">Word 1</string>
    <string name="word_1">Word 1</string>
    <string name="previous_text">Previous</string>
    <string name="next_text">Next</string>
    <string name="done_text">Done</string>
    <string name="re_generate_text">Re-\ngenerate</string>
    <string name="choose_a_category_text">Choose a category:</string>
    <string name="enter_3_words_text">Enter 3 words:</string>
    <string name="word_1_text">Word 1</string>
    <string name="Error_message">\"Failed to generate. Click \"Regenerate\" or click \"Done\" to go back \"</string>
    <string name="google_URL">https://www.google.com</string>
    <string name="let_s_go_txt">Let\'s go!</string>
    <string name="e_g_wanderlustjunkie_txt">e.g: WanderlustJunkie</string>
    <string name="pick_a_username_txt">Pick a username:</string>
    <string name="last_name_txt">Last name</string>
    <string name="first_name_txt">First name</string>
    <string name="putting_in_the_magic_txt">Putting in the magic…</string>
    <string name="Read_story_txt">Read story!</string>
    <string name="image_generated_based_on_user_input_txt">Image generated based on user input</string>
    <string name="proceed_to_read_story_txt">proceed to read story</string>
    <string name="ai_generated_image_txt">AI generated image</string>
    <string name="privacy_policy_header"><u>Privacy Policy</u></string>
    <string name="i_agree_to_the_privacy_policy">I agree to the <u>Privacy Policy</u></string>

    <string-array name="Categories">
        <item>Mystery</item>
        <item>Comedy</item>
        <item>Batman</item>
        <item>Fantasy World</item>
        <item>Motivation</item>
        <item>Romance</item>
        <item>Starstruck</item>
        <item>Hero</item>
        <item>Villain</item>
        <item>Time Travel</item>
        <item>Alien Encounter</item>
        <item>Parallel Universes</item>
        <item>Dystopian Future</item>
        <item>Superpowers</item>
        <item>The Avengers</item>
        <item>Haunted House</item>
        <item>Exploration</item>
        <item>Classical</item>
        <item>Dreamscape</item>
        <item>Optimistic</item>
        <item>Cultural Exchange</item>
        <item>Technological Advancements</item>
        <item>Lost and Found</item>
        <item>Love at First Sight</item>
        <item>Quest for Knowledge</item>
    </string-array>

    <string name="privacy_policy">
        <b>Privacy Policy</b>\n
        <i>Last Updated: 22/08/2023</i>\n\n
        Welcome to Magic Story!\n\n
        This Privacy Policy outlines how Magic Story ("we", "us", "our") collects, uses, and protects the information you provide when using our mobile application ("app"). By using our app, you agree to the practices described in this policy.\n\n
        Information We Collect:\n\n
        We collect and store the following information when you use our app:\n\n
        Full name and frequency of usage \n\n
        Analytics and Diagnostics Data \n\n
        How We Use Your Information:\n\n
        The information helps us understand user behaviour and improve our app. We use analytics tools to collect data on app usage and performance. This data includes crash logs and diagnostics, which help us identify and address any issues to provide you with a better experience. \n\n
        User-Generated Content:\n\n
        Our app generates images and stories based on user input. While we make efforts to ensure that the content generated is safe and appropriate,
        we want to emphasize that we do not claim responsibility for any harmful, inappropriate, or offensive content that may be generated.
        OpenAI\'s API is designed to detect and prevent harmful content, but errors can occur.
        In the case where harmful or restrictive content may be generated, users can tap the report button that is right next to the generated content. We will utilize user reports to inform content filtering and moderation in our apps.\n\n
        Children\'s Privacy:\n\n
        Our app is suitable for users of all ages, including children. We do not knowingly collect personal information from individuals under the age of 13. If you are a parent or guardian and believe that your child has provided us with personal information, please contact us at musabumair005@gmail.com, and we will take steps to remove such information.\n\n
        Account deletion:\n\n
        Please contact us at musabumair005@gmail.com and we will delete all data associated with your usage.\n\n
        Changes to this Privacy Policy:\n\n
        We reserve the right to modify this Privacy Policy at any time. Any changes will be effective immediately upon posting the updated policy in the app. We encourage you to review this policy periodically for any updates.\n\n
        Contact Us:\n\n
        If you have any questions or concerns about this Privacy Policy or our app\'s practices, please contact us at musabumair005@gmail.com.\n\n
        Your Consent:\n\n
        By using our app, you consent to the terms outlined in this Privacy Policy.\n
</string>
    <string name="Report_image">Report image</string>
    <string name="report_story">Report story</string>


</resources>