<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2196F3"
        android:backgroundTint="#009688"
        android:foregroundTint="#009688"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category_statement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/choose_a_category_text"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/category_box"
            android:layout_width="223dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:entries="@array/Categories"
            android:gravity="center" />

        <TextView
            android:id="@+id/words_statement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/enter_3_words_text"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/word1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/word_1_text"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/word2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Word2_text"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/word3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Word3_text"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/generate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/generate_text"
            android:textSize="17sp" />
    </LinearLayout>
</layout>
