<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        android:padding="15dp"
        tools:context=".View.LandingPage">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="@color/white"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/login2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="327dp"
            android:layout_height="157dp"
            android:layout_marginTop="152dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearL_insideCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="visible">

                <EditText
                    android:id="@+id/first_name_box"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/bubblegum_sans"
                    android:hint="@string/first_name_txt"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/last_name_box"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/bubblegum_sans"
                    android:hint="@string/last_name_txt"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/username_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:fontFamily="@font/cantora_one"
            android:text="@string/pick_a_username_txt"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/username_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/e_g_wanderlustjunkie_txt"
            android:inputType="textPersonName"
            android:shadowColor="@color/white"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/hint"
            android:textColorLink="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_guide" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="134dp"
            android:layout_height="92dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/save_button_border"
            android:elevation="50dp"
            android:fontFamily="@font/luckiest_guy"
            android:text="@string/let_s_go_txt"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            android:visibility="visible"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_box"
            app:layout_constraintVertical_bias="0.584"
            tools:ignore="TextSizeCheck" />

        <ProgressBar
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_box" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>